fixed z index issue and off-center modal issue on berries.html. I removed the margin-left from the modal to center it, and added a z-index: 1 to have it pop up on top of the footer image.

--- a/berries.css
+++ b/berries.css
@@ -92,9 +92,9 @@ body {
     width: 80%;
     height: 25em;
     top: -4em;
-    margin-left: 10%;
     overflow: scroll;
     background-color: white;
+    z-index: 1;
 }
 
 #close {
